  * apport/report.py, add_proc_info(): Only try to attach
    /proc/pid/attr/current if we are root. This works around Python
    segfaulting regression when encountering EPERM on read() (see 
    LP #314065).
  * apport/report.py testsuite: Use "isofs" for module license check
    testing instead of "usbcore", since the latter is more likely to
    get built into the kernel.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 05 Jan 2009 15:17:04 +0100

apport (0.122) jaunty; urgency=low

  * apport/crashdb_impl/launchpad.py: Support extra tags in the
    report's "Tags:" field, and set them in the Launchpad bug.
    Document this in doc/data-format.tex. Thanks to Steve Conklin for
    the patch!

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 05 Jan 2009 10:06:49 +0100

apport (0.121) jaunty; urgency=low

  * debian/apport.init: Drop long obsolete setting of
    /proc/sys/kernel/crashdump-size.
  * debian/apport.init: Make restart actually work if the default file was
    changed. (LP: #292402)
  * apport/report.py, add_proc_environ(): Do not include verbatim $PATH, only
    classify it as "default" (does not appear at all then), "custom,
    user" (/home or /tmp in $PATH), or "custom, no user". Add appropriate test
    case. Update the data format documentation accordingly. (LP: #245263)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 08 Dec 2008 19:37:53 -0800

apport (0.120) jaunty; urgency=low

  * man/apport-cli.1: Fix "sytem" typo. (LP: #288977)
  * apport/fileutils.py: Add new function get_options() to read
    ~/.config/apport/settings. In the future, the apport-ignore.xml file will
    move to this directory, too. Based on idea and initial patch from Nikolay
    Derkach.
  * bin/apport: Check config option "unpackaged", and if it is set to True,
    create a crash dump for unpackaged programs, too. Bump apport package
    dependency to python-apport for this.
  * apport/ui.py: Fix regression introduced in in 0.115 for checking