@@ -11,8 +11,11 @@ apport (0.123) UNRELEASED; urgency=low
   * apport/report.py testsuite: Use "isofs" for module license check
     testing instead of "usbcore", since the latter is more likely to
     get built into the kernel.
+  * apport/report.py, add_proc_environ(): Use "PATH=(...)" instead of
+    "PATH: ..." notation, to be consistent with other environment
+    variables. Unbreaks the apport test suite.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 05 Jan 2009 15:17:04 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 05 Jan 2009 16:24:17 +0100
 
 apport (0.122) jaunty; urgency=low
 
